--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Medical Mission Database</title>
         <link rel="shortcut icon" type="image/png" href="images/missiondb64.png"/>
         <link rel="stylesheet" href="style/base.css">
-        <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+        <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <header class="screen">
