Fix a quoting issue in index

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <!-- pouchdb -->
         <script src="js/pouchdb-7.2.1.min.js"></script>
         <!-- qr -->
-        <script src=js/qrenc-4.0.0.min.js></script>
+        <script src="js/qrenc-4.0.0.min.js"></script>
         <!-- datepicker -->
         <script src="js/datepicker.js"></script>
         <!-- timepicker -->
