Fix displayState restart

--- a/index.html
+++ b/index.html
@@ -212,12 +212,10 @@
             <b><center>
             <h1>Mission Database</h1>
             <img src="images/missiondb512.png" alt="MissionDb Medical Mission patient database">
-            <div id="splash_screen_error">
-                <hr>
-                    Hmm... Looks like a programming problem.<br>
-                    <a href="mailto:palfille@partners.org?subject=missiondb error">Send a note so we can fix it</a>
-                <hr>
-            </div>
+			<hr>
+				If the application does not appear, contact:.<br>
+				<a href="mailto:palfille@partners.org?subject=missiondb error">missiondb development team</a>
+			<hr>
             </center></b>
         </div>
         <!-- pouchdb -->
