--- a/index.html
+++ b/index.html
@@ -13,43 +13,53 @@
             <div id="headerbox">
                 <div id="headerboxlink"><a href="https://www.github.com/alfille/missiondb" target="_blank" title="Go to MissionDb program website"><h1>Mission<br>Database</h1></a></div>
                 <div id="buttonheader">
-                    <div class="MainMenu pageOverlay">
+                    <!-- top: UserName MainMenu -->
+                    <div class="UserName MainMenu pageOverlay">
                     </div>
+                    <!-- top: SettingMenu -->
                     <div class="SettingMenu pageOverlay">
                         <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Save Changes</button>
                         <button type="button" class="divbutton discarddata return" onclick="displayStateChange()">Discard Changes</button>
                         <button type="button" class="divbutton returndata return" onclick="showPatientList()">Return</button>
                     </div>
+                    <!-- top: PatientList -->
                     <div class="PatientList pageOverlay">
                         <button type="button" class="divbutton" onclick="showMainMenu()">Main Menu</button>
                         <button type="button" class="divbutton" onclick="showPatientNew()">Add Patient</button>
                         <button type="button" class="divbutton" onclick="showPatientPhoto()" id="editreviewpatient">Review/Edit Patient</button>
                     </div>
+                    <!-- top: OperationList -->
                     <div class="OperationList pageOverlay">
                         <button type="button" class="divbutton" onclick="showOperationNew()">Add Operation</button>
                         <button type="button" class="divbutton" onclick="showOperationEdit()" id="editreviewoperation">Review/Edit Operation</button>
                         <button type="button" class="divbutton return" onclick="showPatientPhoto()">Return</button>
                     </div>
+                    <!-- top: PatientNew -->
                     <div class="PatientNew pageOverlay">
                         <button type="button" class="divbutton" id="addPatient" onclick="addPatient()">Create</button>
                         <button type="button" class="divbutton" onclick="showPatientList()">Cancel</button>
                     </div>
+                    <!-- top: PatientPhoto -->
                     <div class="PatientPhoto pageOverlay">
                         <button type="button" class="divbutton return" onclick="showPatientList()">Return</button>
                     </div>
+                    <!-- top: PatientDemographics PatientMedical -->
                     <div class="PatientData PatientDemographics PatientMedical pageOverlay">
                         <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Save Changes</button>
                         <button type="button" class="divbutton discarddata return" onclick="displayStateChange()">Discard Changes</button>
                         <button type="button" class="divbutton returndata return" onclick="showPatientPhoto()">Return</button>
                     </div>
+                    <!-- top: OperationEdit -->
                     <div class="PatientData OperationEdit pageOverlay">
                         <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Save Changes</button>
                         <button type="button" class="divbutton discarddata return" onclick="displayStateChange()">Discard Changes</button>
                         <button type="button" class="divbutton returndata return" onclick="showOperationList()">Return</button>
                     </div>
+                    <!-- top: InvalidPatient -->
                     <div class="InvalidPatient pageOverlay">
                         <button type="button" class="divbutton return" onclick="showPatientList()">Return</button>
                     </div>
+                    <!-- top: CommentList -->
                     <div class="CommentList pageOverlay">
                         <button class="createthecomment libutton divbutton" type="button" onclick="showCommentNew()">New Comment</button>
                         <button class="createtheimage libutton divbutton" type="button" onclick="quickImage()" title="Quick picture">&#128247;</button>
@@ -61,28 +71,38 @@
             </div>
         </header>
         <div id="missiondbody" class="work_screen">
-            <div class="MainMenu pageOverlay">
-                <div id="MainMenuContent" >
-                    <div id="MainMenuContent">
-                        <button type="button" class="divbutton" onclick="showPatientList()">Patient List</button>
-                        <button type="button" class="divbutton" onclick="showSettingMenu()">Settings</button>
-                        <button type="button" class="divbutton" onclick="showPatientDemographics()">Help</button>
-                    </div>
+            <!-- body: UserName -->
+            <div class="UserName pageOverlay">
+                <div id="UserNameContent" >
+                    <label for="UserNameText">User name:</label><input type="text" required="true" id="UserNameText" oninput="UserNameInput()" title="Enter your User Name">
+                    <button type="button" class="divbutton" onclick="UserNameInput()">Enter</button>
                 </div>
             </div>
+            <!-- body: MainMenu -->
+            <div class="MainMenu pageOverlay">
+                <div id="MainMenuContent" >
+                    <button type="button" class="divbutton" onclick="showPatientList()">Patient List</button>
+                    <button type="button" class="divbutton" onclick="showSettingMenu()">Settings</button>
+                    <button type="button" class="divbutton" onclick="showPatientDemographics()">Help</button>
+                </div>
+            </div>
+            <!-- body: PatientList -->
             <div class="PatientList pageOverlay">
                 <div id="PatientListContent" >
                     <table id="PatientList"></table>
                 </div>
             </div>
+            <!-- body: OperationList -->
             <div class="OperationList pageOverlay">
                 <div id="OperationListContent" >
                     <table id="OperationsList"></table>
                 </div>
             </div>
+            <!-- body: PatientDemographics PatientMedical OperationEdit SettingMenu -->
             <div class="PatientData PatientDemographics PatientMedical OperationEdit SettingMenu pageOverlay">
                 <div id="PatientDataContent" ></div>
             </div>
+            <!-- body: PatientPhoto -->
             <div class="PatientPhoto pageOverlay">
                 <div id="PatientPhotoContent" >
                     <img class="entryfield_image">
@@ -106,22 +126,18 @@
                     </div>
                 </div>
             </div>
-            <div class="PatientNew pageOverlay">
-                <div id="PatientNewContent" >
-                    <label>First name: <input type="text" id="newFirst" value="" onInput="checkNew()"></label><br>
-                    <label>Last name: <input type="text" id="newLast" onInput="checkNew()"></label><br>
-                    <label>Date of birth: <input type="date" id="newDOB" onInput="checkNew()"></label>
-                </div>
-            </div>
+            <!-- body: InvalidPatient -->
             <div class="InvalidPatient pageOverlay">
                 <div id="InvalidPatientContent" >
                     <H2>Not a valid patient ID</H2>
                     <p>Possble causes include your data not yet synced, or changes since this patient was selected</p>
                 </div>
             </div>
+            <!-- body: CommentList -->
             <div class="CommentList pageOverlay">
                 <div id="CommentListContent" ></div>
             </div>
+            <!-- body: CommentNew (quick comment) -->
             <div class="CommentNew pageOverlay">
                 <div id="CommentNewContent">
                     <img id="CommentNewImage" class="entryfield_image">
@@ -129,6 +145,7 @@
                     <div id="CommentNewText" class="editable"></div>
                 </div>
             </div>
+            <!-- body: CommentImage (quick photo) -->
             <div class="CommentImage pageOverlay">
                 <input type="file" accept="image/*" id="imageInput" onchange="handleImage()" capture="environment">
                 <input type="file" accept="image/*" id="imageQ" onchange="quickImage2()" capture="environment">
@@ -136,16 +153,17 @@
                 u&#818; Gallery</button>
                 <button type="button" class="divbutton" onclick="showCommentList()">Cancel</button>
             </div>
+            <!-- body: CommentImage2 (quick photo) -->
             <div class="CommentImage2 pageOverlay">
                 <div id="CommentImage2Content" ></div>
                 <img id="imageCheck" class="entryfield_image">
-
                 <label for="annotation">Image comments (optional)</label>
                 <div id="annotation" class="editable"></div>
                 <button type="button" class="divbutton" onclick="saveImage()">Save</button>
                 <button type="button" class="divbutton" onclick="showCommentList()">Cancel</button>
             </div>
         </div>
+        <!-- copyable parts -->
         <div id="templates" class="pageOverlay">
             <div class="editToolbar">
                 <button type="button" onclick="editBar.saveedit()"><span><B>Save</B></span></button>
@@ -177,9 +195,11 @@
                 </li>
             </ul>
         </div>
+        <!-- Footer -->
         <footer class="work_screen">
             <div id="syncstatus">Sync Status</div>
         </footer>
+        <!-- Card print -->
         <div class="print_screen">
             <div id="printCard">
                 <div class=rowCard>
@@ -208,26 +228,25 @@
                 </div>
             </div>
         </div>
+        <!-- Splash screen -->
         <div id="splash_screen">
             <b><center>
             <h1>Mission Database</h1>
             <img src="images/missiondb512.png" alt="MissionDb Medical Mission patient database">
-			<hr>
-				If the application does not appear, contact:.<br>
-				<a href="mailto:palfille@partners.org?subject=missiondb error">missiondb development team</a>
-			<hr>
+            <hr>
+                If the application does not appear, contact:.<br>
+                <a href="mailto:palfille@partners.org?subject=missiondb error">missiondb development team</a>
+            <hr>
             </center></b>
         </div>
-        <!-- pouchdb -->
-        <script src="js/pouchdb-7.2.1.min.js"></script>
-        <!-- qr -->
-        <script src="js/qrenc-4.0.0.min.js"></script>
-        <!-- datepicker -->
-        <script src="js/datepicker.js"></script>
-        <!-- timepicker -->
-        <script src="js/time-pick.js"></script>
-        <script src="js/length-pick.js"></script>
-        <script src="js/base.js"></script>
-        <script src="js/app.js"></script>
+        
+        <!-- scripts -->
+        <!-- pouchdb --> <script src="js/pouchdb-7.2.1.min.js"></script>
+        <!-- qr --> <script src="js/qrenc-4.0.0.min.js"></script>
+        <!-- datepicker --> <script src="js/datepicker.js"></script>
+        <!-- timepicker --> <script src="js/time-pick.js"></script>
+        <!-- length --> <script src="js/length-pick.js"></script>
+        <!-- load service workers --> <script src="js/base.js"></script>
+        <!-- application code --> <script src="js/app.js"></script>
     </body>
 </html>
