update syncstatus display

--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
         </div>
         <!-- Footer -->
         <footer class="work_screen">
-            <div id="syncstatus">Sync Status</div>
+            <label for="userstatus">User:</label><input type="text" readonly id="userstatus"></div>
+            <label for="syncstatus">Sync status:</label><input type="text" readonly id="syncstatus"></div>
         </footer>
         <!-- Card print -->
         <div class="print_screen">
