--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div id="UserNameContent" >
 					<div>
 						<hr>
-						<label for="UserNameText">User name:</label><input type="text" required="true" id="UserNameText" oninput="UserNameInput()" title="Enter your User Name">
+						<label for="UserNameText">User name:</label><input type="text" required="true" id="UserNameText" title="Enter your User Name">
 						<button type="button" class="divbutton" onclick="UserNameInput()">Enter</button>
 						<hr>
                     </div>
