Add list option to PatientData

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     </div>
                     <!-- top: SettingMenu -->
                     <div class="SettingMenu pageOverlay">
+                        <button type="button" class="divbutton editthecomment" onclick="objectPatientData.clickEdit()">Edit</button>
                         <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Save Changes</button>
-                        <button type="button" class="divbutton discarddata return" onclick="displayStateChange()">Discard Changes</button>
-                        <button type="button" class="divbutton returndata return" onclick="showPatientList()">Return</button>
+                        <button type="button" class="divbutton returndata return" onclick="showPatientList()">Cancel</button>
                     </div>
                     <!-- top: PatientList -->
                     <div class="PatientList pageOverlay">
@@ -48,15 +48,13 @@
                     <div class="PatientData PatientDemographics PatientMedical pageOverlay">
                         <button type="button" class="divbutton editthecomment" onclick="objectPatientData.clickEdit()">Edit</button>
                         <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Save Changes</button>
-                        <button type="button" class="divbutton discarddata return" onclick="displayStateChange()">Discard Changes</button>
-                        <button type="button" class="divbutton returndata return" onclick="showPatientPhoto()">Return</button>
+                        <button type="button" class="divbutton returndata return" onclick="showPatientPhoto()">Cancel</button>
                     </div>
                     <!-- top: OperationEdit -->
                     <div class="PatientData OperationEdit pageOverlay">
                         <button type="button" class="divbutton editthecomment" onclick="objectPatientData.clickEdit()">Edit</button>
                         <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Save Changes</button>
-                        <button type="button" class="divbutton discarddata return" onclick="displayStateChange()">Discard Changes</button>
-                        <button type="button" class="divbutton returndata return" onclick="showOperationList()">Return</button>
+                        <button type="button" class="divbutton returndata return" onclick="showOperationList()">Cancel</button>
                     </div>
                     <!-- top: InvalidPatient -->
                     <div class="InvalidPatient pageOverlay">
