--- a/index.html
+++ b/index.html
@@ -210,17 +210,17 @@
         <div class="print_screen">
             <div id="printCard">
                 <div class=rowCard>
-                    <div><img class="photoCard" height=180 width=180></div>
+                    <div><img id="photoCard" src="images/missiondb192.png" alt="Patient photo" height=180 width=180></div>
                     <div><canvas class="qrCard" height=180 width=180></canvas></div>
                 </div>
                 <div class=rowCard>
                     <div><table>
-                        <tr><td>Patient name</td><td>blah blah blblblah</td></tr>
+                        <tr><td>Patient name</td><td></td></tr>
                         <tr><td>Complaints</td><td></td></tr>
                         <tr><td>Procedure</td><td></td></tr>
                         <tr><td>Length</td><td></td></tr>
                         <tr><td>Surgeon</td><td></td></tr>
-                        <tr><td>Surgical class</td><td></td></tr>
+                        <tr><td>ASA</td><td></td></tr>
                     </table></div>
                 </div>
                 <div class=rowCard>
